// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mdast-from-markdown > should convert markdown to mdast 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Hello world",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`mdast-from-markdown > should convert markdown with flow math to mdast 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Hello world",
        },
      ],
      "position": {
        "end": {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "data": {
        "hChildren": [
          {
            "children": [
              {
                "type": "text",
                "value": "x^2",
              },
            ],
            "properties": {
              "className": [
                "language-math",
                "math-display",
              ],
            },
            "tagName": "code",
            "type": "element",
          },
        ],
        "hName": "pre",
      },
      "meta": null,
      "position": {
        "end": {
          "column": 3,
          "line": 4,
          "offset": 22,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 13,
        },
      },
      "type": "math",
      "value": "x^2",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 5,
      "offset": 23,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`mdast-from-markdown > should convert markdown with math to mdast 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "Hello world ",
        },
        {
          "data": {
            "hChildren": [
              {
                "type": "text",
                "value": "x^2",
              },
            ],
            "hName": "code",
            "hProperties": {
              "className": [
                "language-math",
                "math-inline",
              ],
            },
          },
          "position": {
            "end": {
              "column": 18,
              "line": 1,
              "offset": 17,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "type": "inlineMath",
          "value": "x^2",
        },
      ],
      "position": {
        "end": {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 18,
      "line": 1,
      "offset": 17,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
